tests/miniJava/pos/001306_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( this ) System.out.println ( { } ) ; } }
