tests/miniJava/neg/006724_mutation.MiniJava
class java { public String static void Main ( String [ ] java ) { { } } }
